<resources>
    <string name="app_name">Kontakt og Avtalebok</string>
    <string name="channel_name">Min Kanal</string>
    <string name="channel_description">Min Beskrivelse</string>
    <string name="title_contact">Kontakter</string>
    <string name="title_appoint">Avtaler</string>
    <string name="title_notifications">Notifications</string>
    <string name="add">Legg til</string>
    <string name="del">Slett</string>
    <string name="edit">Endre</string>
    <string name="name">Navn</string>
    <string name="tlf">Telefonnummer</string>
    <string name="date">Dato</string>
    <string name="dateHelp">DD.MM.YYYY</string>
    <string name="time">Klokkeslett</string>
    <string name="mssg">Melding</string>
    <string name="loc">Sted</string>
    <string name="settings">Settings</string>
</resources>